[gd_scene load_steps=8 format=2]

[ext_resource path="res://food/vegetals/flowers/strength_flower/strength_flower.gd" type="Script" id=1]
[ext_resource path="res://food/vegetals/flowers/strength_flower/sprites/strength_flower_thirsty.png" type="Texture" id=2]
[ext_resource path="res://food/vegetals/flowers/strength_flower/sprites/strength_flower.png" type="Texture" id=3]
[ext_resource path="res://food/vegetals/flowers/strength_flower/strength_flower_light.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=4]
radius = 100.0

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "thirsty",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 29.7465

[node name="strength_flower" type="StaticBody2D"]
collision_layer = 12
collision_mask = 12
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 12
collision_mask = 12

[node name="area" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="flower_sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -61 )
frames = SubResource( 5 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -75 )
texture = ExtResource( 4 )
color = Color( 0.960784, 0.662745, 0.345098, 1 )
energy = 0.5
range_item_cull_mask = 523775
shadow_color = Color( 0.427345, 0.246672, 0.464844, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.499996 )
shape = SubResource( 3 )

[node name="pearl_generation" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="water_button" type="TextureButton" parent="."]
margin_left = -43.0
margin_top = -103.0
margin_right = 44.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="pearl_generation" to="." method="_on_pearl_generation_timeout"]
[connection signal="pressed" from="water_button" to="." method="_on_water_button_pressed"]
